# vtu2regular

./: README.md  pyproject.toml
scripts/: read_sampled.py  read_vtkhdf.py  sample_vtu.py  sample_vtu_2D.py  sampleall_vtu.py  sampleall_vtu_2D.py  vtk_array_fun.py
src/vtu2regular/: __init__.py  __main__.py
