[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtu2regular"
description = "read irregular grid .VTU and write to regular grid"
keywords = ["adaptive mesh"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
requires-python = ">=3.8"
dynamic = ["version", "readme"]
dependencies = ["vtk", "numpy", "scipy", "h5py", "matplotlib"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "vtu2regular.__version__"}

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy",
  "types-python-dateutil"]

[tool.black]
line-length = 90

[tool.mypy]
files = ["src", "scripts"]

ignore_missing_imports = true
allow_redefinition = true
show_error_context = false
show_column_numbers = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)s"
addopts = "--ignore=archive/"
